working on full project screen.

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -51,7 +51,7 @@
 <div th:fragment="nav">
     <!-- this is header -->
     <nav class="navbar navbar-expand-lg navbar-light" style="background-color:#BBF8FC">
-        <a class="navbar-brand" href="/home">LevelCreator</a>
+        <a class="navbar-brand" href="/levelcreator">LevelCreator</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
