--- a/src/main/resources/templates/mywork.html
+++ b/src/main/resources/templates/mywork.html
@@ -85,32 +85,35 @@
         <!--</div>-->
         <div class="col-sm-3" th:each="project, stat: ${projects}" style="padding:2%;">
             <a th:href="@{'/workspace/'+ ${project.id}}">
-            <div class="card mb-3 projectCard" th:onclick="loadContent([[${project.id}]],[[${project.mapJSON}]])">
+                <div class="card mb-3 projectCard" th:onclick="loadContent([[${project.id}]],[[${project.mapJSON}]])">
+                    <div class = "delButton">
+                        <a th:href="@{/myWork/delete/{id}(id=${project.id})}" onclick="return confirm('Are you sure?')"><i class="far fa-trash-alt fa-lg"></i></a>
+                        <img class="card-img-top" th:src="${project.screenshot}"/>
+                    </div>
+                    <div class="card-body">
+                        <!--                        Title Of Project-->
+                        <h5 class="card-title cardProjectTitle" th:title="${project.name}" th:text="${project.name}"/>
+                        <!--                        Last Edited Date-->
+                        <h6 class="text-muted cardProjectDate" th:title="'Last updated at '+ ${project.createdDate}"
+                            th:text="'Last updated at '+ ${project.createdDate.substring(0, 10)}"/>
+                        <!--                        Switch button toggle public or private-->
+                        <div class="custom-control custom-switch" th:onclick="togglePublic(event,[[${project.id}]])">
+                            <input type="checkbox" class="custom-control-input" th:id="'customSwitch' + ${project.id}"
+                                   th:checked="${project.type} ? 'checked'">
+                            <label class="custom-control-label" th:for="'customSwitch'+ ${project.id}"><i
+                                    class="fas fa-globe-americas"></i></label>
+                        </div>
 
-                <img class="card-img-top" th:src="${project.screenshot}"/>
-
-                <div class="card-body">
-                    <!--                        Title Of Project-->
-                    <h5 class="card-title cardProjectTitle" th:title="${project.name}" th:text="${project.name}"/>
-                    <!--                        Last Edited Date-->
-                    <h6 class="text-muted cardProjectDate" th:title="'Last updated at '+ ${project.createdDate}"
-                        th:text="'Last updated at '+ ${project.createdDate.substring(0, 10)}"/>
-                    <!--                        Switch button toggle public or private-->
-                    <div class="custom-control custom-switch" th:onclick="togglePublic(event,[[${project.id}]])">
-                        <input type="checkbox" class="custom-control-input" th:id="'customSwitch' + ${project.id}"
-                               th:checked="${project.type} ? 'checked'">
-                        <label class="custom-control-label" th:for="'customSwitch'+ ${project.id}"><i
-                                class="fas fa-globe-americas"></i></label>
                     </div>
 
                 </div>
-                <a th:href="@{/myWork/delete/{id}(id=${project.id})}" onclick="return confirm('Are you sure?')">Delete</a>
-            </div>
             </a>
 
         </div>
     </div>
 </div>
+
+
 
 
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
