--- a/src/main/resources/templates/workspace.html
+++ b/src/main/resources/templates/workspace.html
@@ -68,7 +68,7 @@
             </div>
             <div class = "row iconrow">
                 <div class="col">
-                    <a><i class="fas fa-download icon" title="Download"></i></a>
+                    <a href = "#"><i class="fas fa-download icon" id = "download" title="Download"></i></a>
                 </div>
             </div>
             <!--            this is test icons-->
