--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -240,3 +240,55 @@ body {
 /*    top:0;bottom:0;right:0;left:0;*/
 /*    margin:auto;*/
 /*}*/
+
+/*
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 70%;
+    background: rgba(0, 0, 0, 0);
+    transition: background 0.5s ease;
+}
+
+.sc-container:hover .overlay {
+    display: block;
+    background: rgba(0, 0, 0, .4);
+}
+
+.delButton {
+    position: absolute;
+    width: 500px;
+    left:-100px;
+    top: 150px;
+    text-align: center;
+    opacity: 0;
+    transition: opacity .35s ease;
+}
+
+.delButton a {
+    width: 200px;
+    padding: 12px 48px;
+    text-align: center;
+    color: white;
+    border: solid 2px white;
+    z-index: 1;
+}
+
+.sc-container:hover .delButton {
+    opacity: 1;
+}
+*/
+.delButton i{
+    padding-right: 20px;
+    padding-top: 20px;
+    float: right;
+}
+
+.delButton a{
+    visibility:hidden;
+}
+.delButton:hover a {
+    visibility:visible;
+}
