Added Popups for saving project and alerts when users try to exit.

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -11,7 +11,7 @@
 
 <body>
 
-<div th:insert="fragments.html :: nav"></div>
+<div th:replace="fragments.html :: nav"></div>
 
 <div class="container m-2" style="max-width: 100% ">
     <div class="row" th:fragment="list" xmlns:th="http://www.thymeleaf.org">
