--- a/src/main/resources/templates/workspace.html
+++ b/src/main/resources/templates/workspace.html
@@ -43,7 +43,7 @@
                                     Would you like to save?
                                 </div>
                                 <div class="modal-footer" style="padding:1rem !important;">
-                                    <button type="button" class="btn btn-primary" id="saveWork">Yes</button>
+                                    <button type="button" class="btn btn-primary" data-dismiss="modal" id="saveWork">Yes</button>
                                     <button type="button" class="btn btn-secondary" data-dismiss="modal">No</button>
                                 </div>
                             </div>
