--- a/src/main/resources/templates/workspace.html
+++ b/src/main/resources/templates/workspace.html
@@ -329,10 +329,9 @@
                         <input type="file" id="fileBtn" hidden="hidden" onclick="this.value = null"
                                onchange="addTileset(this);">
                         <div class="float-right ml-auto">
-                            <i href="#" class="fas fa-plus tileSetIcon" id="plusBtn" title="Add Tileset"></i>
-                            <i href="#" class="fas fa-minus tileSetIcon" id="minusBtn " title="Delete Tileset"></i>
-                            <!--                            <a href="#" class="add-tileset float-right my-1 ml-lg-5" id="plusBtn"><span class="fas fa-plus"></span></a>-->
-                            <!--                            <a href="#" class="remove-tileset float-right my-1 ml-4" id="minusBtn"><span class="fas fa-minus"></span></a>-->
+
+                            <a href="#" class="add-tileset tileSetIcon" id="plusBtn"  title="Add Tileset" ><span class="fas fa-plus"></span></a>
+                            <a href="#" class="remove-tileset tileSetIcon" id="minusBtn" title="Delete Tileset"><span class="fas fa-minus"></span></a>
                         </div>
 
                     </div>
