--- a/src/main/resources/templates/workspace.html
+++ b/src/main/resources/templates/workspace.html
@@ -186,7 +186,7 @@
                         <i class="fas fa-users icon" title="Collaborators"></i>
                     </a>
 
-                    <div class="modal fade" style="width:500px!important;" id="collaboratorModal" tabindex="-1" role="dialog" data-backdrop="static"
+                    <div class="modal fade" style="width:350px!important;" id="collaboratorModal" tabindex="-1" role="dialog" data-backdrop="static"
                          aria-labelledby="exampleModalLabel" aria-hidden="true">
                         <div class="modal-dialog modal-lg" role="document">
                             <div class="modal-content">
@@ -197,30 +197,7 @@
                                     </button>
                                 </div>
                                 <div class="modal-body" style="padding:unset!important;">
-                                    <ul class = "list-group" th:each = "collaborator: ${collaborators}">
-                                        <li class="list-group-item d-flex justify-content-between align-items-center">
-                                            <p th:text="${collaborator.username}"/>
-                                            <button class="rmv badge badge-primary badge-pill">-</button>
-                                        </li>
-                                    </ul>
-                                </div>
-                                <div class="modal-footer" style="padding:unset!important;">
-                                    <form>
-                                        <div class="form-inline">
-                                            <div class="col-auto">
-                                                <input type="text" id="inlineFormInput" placeholder="Username">
-                                            </div>
-                                            <div class="col-auto">
-                                                <div class="row" >
-                                                <button type="submit" class="badge badge-primary badge-pill">+</button>
-                                                </div>
-                                                <div class="row">
-                                                <button type="button" class="badge badge-primary badge-pill" data-dismiss="modal">Cancel</button>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </form>
-
+                                    <div th:insert="fragments.html::collaborators"></div>
                                 </div>
                             </div>
                         </div>
