team work page added for works user has been invited to edit user ll not be able to toggle public or delete work on teamwork page as they are not owner of the work

--- a/src/main/resources/templates/workspace.html
+++ b/src/main/resources/templates/workspace.html
@@ -190,13 +190,13 @@
                          aria-labelledby="exampleModalLabel" aria-hidden="true">
                         <div class="modal-dialog modal-lg" role="document">
                             <div class="modal-content">
-                                <div class="modal-header">
+                                <div class="modal-header bg-primary">
                                     <h5 class="modal-title" id="collaboratorModalLabel">Add Collaborators</h5>
                                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                         <span aria-hidden="true">&times;</span>
                                     </button>
                                 </div>
-                                <div class="modal-body" style="padding:unset!important;">
+                                <div class="modal-body p-1">
                                     <div th:insert="fragments.html::collaborators"></div>
                                 </div>
                             </div>
