--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -68,7 +68,7 @@
                 </li>
 
                 <li sec:authorize="isAuthenticated()"  class="nav-item">
-                    <a class="nav-link" href="/following">Following<span class="badge badge-pill badge-info mx-1">12</span></a>
+                    <a class="nav-link" href="/teamWork">Team Work</a>
                 </li>
             </ul>
 
@@ -98,6 +98,9 @@
 
 <div id="collaborators" th:fragment="collaborators">
     <form method="POST">
+        <div th:if="${UserNotExist}" class="alert alert-danger text-center mx-4 py-1" role="alert">
+            <h6>User Not Exist.</h6>
+        </div>
     <ul id="collaboratorList" class = "list-group" th:each = "collaborator, stat : ${collaborators}">
         <li class="list-group-item d-flex justify-content-between align-items-center mx-4 px-3" style="padding:unset;">
             <p th:text="${collaborators[__${stat.index}__].username}"/>
@@ -110,7 +113,7 @@
         </div>
         <div class="col-auto">
             <div class="row">
-                <button type="button" class="badge badge-secondary badge-pill" onclick="addCollaborator()">+</button>
+                <button type="button" class="badge badge-secondary badge-pill ml-4" onclick="addCollaborator()">+</button>
             </div>
             <div class="row">
                 <button type="button" class="badge badge-secondary badge-pill" data-dismiss="modal">Cancel</button>
