--- a/src/main/resources/templates/workspace.html
+++ b/src/main/resources/templates/workspace.html
@@ -258,8 +258,9 @@
 
 
         <div class="col-8 middle">
-            <div class="box" id="canvasStorage"
-                 style="height:900px; width: 100%; position:relative; overflow: auto; background-color: gray;">
+            <div class="box" id="canvasStorage" >
+<!--                 style="height:500px; width: 100%; position:relative; overflow: auto; background-color: gray;"-->
+
                 <div class="canvasGird" id="testGirdy">
                     <canvas id="grid_canvas" class="text-center"></canvas>
 
