Implemented the full project page.

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -286,9 +286,25 @@ body {
     float: right;
 }
 
-.delButton a{
+.delButton i{
     visibility:hidden;
 }
-.delButton:hover a {
+.delButton:hover i {
     visibility:visible;
+}
+
+.comment-wrapper .card-body {
+    max-height:650px;
+    overflow:auto;
+}
+
+.comment-wrapper .media-list .media img {
+    width:64px;
+    height:64px;
+    border:2px solid #e5e7e8;
+}
+
+.comment-wrapper .media-list .media {
+    border-bottom:1px dashed #efefef;
+    margin-bottom:25px;
 }
