--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -97,10 +97,9 @@
 
 
 <div id="collaborators" th:fragment="collaborators">
-    <form method="POST">
-        <div th:if="${UserNotExist}" class="alert alert-danger text-center mx-4 py-1" role="alert">
-            <h6>User Not Exist.</h6>
-        </div>
+    <div th:if="${UserNotExist}" class="alert alert-danger text-center mx-4 py-1" role="alert">
+        <h6>User Not Exist.</h6>
+    </div>
     <ul id="collaboratorList" class = "list-group" th:each = "collaborator, stat : ${collaborators}">
         <li class="list-group-item d-flex justify-content-between align-items-center mx-4 px-3" style="padding:unset;">
             <p th:text="${collaborators[__${stat.index}__].username}"/>
@@ -113,14 +112,13 @@
         </div>
         <div class="col-auto">
             <div class="row">
-                <button type="button" class="badge badge-secondary badge-pill ml-4" onclick="addCollaborator()">+</button>
+                <button type="button" id="addCollaboratorBtn" class="badge badge-secondary badge-pill ml-4" onclick="addCollaborator()">+</button>
             </div>
             <div class="row">
                 <button type="button" class="badge badge-secondary badge-pill" data-dismiss="modal">Cancel</button>
             </div>
         </div>
     </div>
-    </form>
 </div>
 
 
